--- a/Controls/MairaButtonMapping.xaml
+++ b/Controls/MairaButtonMapping.xaml
@@ -1,15 +1,15 @@
-﻿<UserControl x:Class="MarvinsAIRARefactored.Controls.ButtonMapping"
+﻿<UserControl x:Class="MarvinsAIRARefactored.Controls.MairaButtonMapping"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MarvinsAIRARefactored.Controls"
+             xmlns:controls="clr-namespace:MarvinsAIRARefactored.Controls"
              xmlns:components="clr-namespace:MarvinsAIRARefactored.Components"
              mc:Ignorable="d"
              d:Width="700"
              d:Height="Auto">
 
-    <Border Margin="0,10,0,10" Padding="0,10,0,10" BorderThickness="2" CornerRadius="10" Background="#CC000000" BorderBrush="White">
+    <Border Margin="0,10,0,10" Padding="0,10,0,10" BorderThickness="2" CornerRadius="10" Background="#B0000000" BorderBrush="White">
 
         <Grid>
 
@@ -19,7 +19,7 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
 
-            <local:ImageButton Grid.Column="0" x:Name="Record_ImageButton" LabelText="" BehindIcon="/MarvinsAIRARefactored;component/artwork/icon_record_off.png" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_record_on.png" Width="48" Height="48" Margin="10,0,10,0" Click="Record_ImageButton_Click"/>
+            <controls:MairaButton Grid.Column="0" x:Name="Record_MairaButton" Title="" BehindIcon="/MarvinsAIRARefactored;component/artwork/icon_record_off.png" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_record_on.png" Margin="10,0,10,0" Click="Record_MairaButton_Click"/>
 
             <StackPanel Grid.Column="1" VerticalAlignment="Center">
 
@@ -28,7 +28,7 @@
 
             </StackPanel>
 
-            <local:ImageButton Grid.Column="2" LabelText="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_trash.png" Width="48" Height="48" Margin="10,0,10,0" Click="TrashButton_Click"/>
+            <controls:MairaButton Grid.Column="2" Title="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_trash.png" Margin="10,0,10,0" Click="Trash_MairaButton_Click"/>
 
         </Grid>
 
