--- a/App.xaml
+++ b/App.xaml
@@ -22,6 +22,8 @@
         
         <Style TargetType="{x:Type GroupBox}">
             <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Foreground" Value="#80FFFFFF"/>
+            <Setter Property="Background" Value="#B0000000"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type GroupBox}">
@@ -52,7 +54,7 @@
                                 </Border>
                             </Border>
                             <Border x:Name="Header" Grid.Column="1" Padding="3,1,3,0" Grid.RowSpan="2" Grid.Row="0">
-                                <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" Opacity="0.75"/>
+                                <ContentPresenter ContentSource="Header" RecognizesAccessKey="True" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                             </Border>
                             <ContentPresenter Grid.Column="1" Grid.ColumnSpan="2" Margin="{TemplateBinding Padding}" Grid.Row="2" SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
                         </Grid>
