--- a/Controls/MairaKnob.xaml
+++ b/Controls/MairaKnob.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="MarvinsAIRARefactored.Controls.KnobControl"
+﻿<UserControl x:Class="MarvinsAIRARefactored.Controls.MairaKnob"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MarvinsAIRARefactored.Controls"
+             xmlns:controls="clr-namespace:MarvinsAIRARefactored.Controls"
              mc:Ignorable="d"
              d:Width="200"
              d:Height="Auto">
@@ -15,7 +15,7 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <Label x:Name="Label" Grid.Row="0" Content="{Binding Title, RelativeSource={RelativeSource AncestorType=UserControl}}" HorizontalAlignment="Center"/>
+        <Label x:Name="Label" Grid.Row="0" Content="{Binding Title, RelativeSource={RelativeSource AncestorType=UserControl}}" HorizontalAlignment="Center" PreviewMouseRightButtonDown="Label_PreviewMouseRightButtonDown"/>
 
         <Border Grid.Row="1" BorderBrush="White" BorderThickness="2" Padding="10,4,10,4" CornerRadius="4">
 
@@ -36,14 +36,14 @@
 
                 <Image Grid.Column="0" Source="/MarvinsAIRARefactored;component/artwork/dial.png"/>
 
-                <Image Grid.Column="0" x:Name="KnobImage" Source="/MarvinsAIRARefactored;component/artwork/dial_marker.png" RenderTransformOrigin="0.5,0.5" MouseDown="Knob_MouseDown" MouseUp="Knob_MouseUp" MouseMove="Knob_MouseMove" Cursor="Hand"/>
+                <Image Grid.Column="0" x:Name="KnobImage" Source="/MarvinsAIRARefactored;component/artwork/dial_marker.png" RenderTransformOrigin="0.5,0.5" MouseDown="KnobImage_Image_MouseDown" MouseUp="KnobImage_Image_MouseUp" MouseMove="KnobImage_Image_MouseMove" Cursor="Hand"/>
 
                 <Label Grid.Column="1" FontSize="37" FontFamily="Advanced LED Board-7" Padding="0" Margin="10,0,0,0" Content="{Binding ValueString, RelativeSource={RelativeSource AncestorType=UserControl}}" HorizontalContentAlignment="Center"/>
 
                 <StackPanel Grid.Column="2" Margin="10,0,0,0">
 
-                    <local:MappableImageButton LabelText="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_plus_small.png" Padding="0" Margin="1" Click="Plus_Click" Small="True" ButtonMappings="{Binding PlusButtonMappings, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
-                    <local:MappableImageButton LabelText="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_minus_small.png" Padding="0" Margin="1" Click="Minus_Click" Small="True" ButtonMappings="{Binding MinusButtonMappings, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                    <controls:MairaMappableButton Title="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_plus_small.png" Padding="0" Margin="1" Click="Plus_MairaMappableButton_Click" Small="True" ButtonMappings="{Binding PlusButtonMappings, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
+                    <controls:MairaMappableButton Title="" ButtonIcon="/MarvinsAIRARefactored;component/artwork/icon_minus_small.png" Padding="0" Margin="1" Click="Minus_MairaMappableButton_Click" Small="True" ButtonMappings="{Binding MinusButtonMappings, RelativeSource={RelativeSource AncestorType=UserControl}}"/>
 
                 </StackPanel>
 
