--- a/Windows/MainWindow.xaml
+++ b/Windows/MainWindow.xaml
@@ -637,88 +637,43 @@
 
                 <StackPanel Margin="10">
 
-                    <controls:MairaSwitch Margin="0,10,0,0" x:Name="AdminBoxx_ConnectToAdminBoxx_MairaSwitch" Title="{Binding Localization[ConnectToAdminBoxx]}" Toggled="AdminBoxx_ConnectToAdminBoxx_MairaSwitch_Toggled"/>
+                    <Grid>
+
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="Auto"/>
+                        </Grid.ColumnDefinitions>
+
+                        <controls:MairaSwitch Grid.Column="0" Margin="0,10,0,0" x:Name="AdminBoxx_ConnectToAdminBoxx_MairaSwitch" Title="{Binding Localization[ConnectToAdminBoxx]}" Toggled="AdminBoxx_ConnectToAdminBoxx_MairaSwitch_Toggled"/>
+                        <controls:MairaButton Grid.Column="1" x:Name="AdminBoxx_Test" Title="Test" Click="AdminBoxx_Test_Click"/>
+
+                    </Grid>
+
+                    <controls:MairaSwitch Margin="0,10,0,20" x:Name="AdminBoxx_ConnectOnStartup_MairaSwitch" Title="{Binding Localization[ConnectOnStartup]}" IsOn="{Binding Settings.AdminBoxxConnectOnStartup, Mode=TwoWay}"/>
 
                     <Grid Margin="0,0,0,20">
-                        
+
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                             <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <controls:MairaKnob Grid.Column="1" Margin="10,0,10,0" Title="{Binding Localization[Brightness]}" Value="{Binding Settings.AdminBoxxBrightness, Mode=TwoWay}" ValueString="{Binding Settings.AdminBoxxBrightnessString}" SmallValueChangeStep="0.001" LargeValueChangeStep="0.05" RotationMultiplier="10" PlusButtonMappings="{Binding Settings.AdminBoxxBrightnessPlusButtonMappings}" MinusButtonMappings="{Binding Settings.AdminBoxxBrightnessMinusButtonMappings}" ValueChangedCallback="AdminBoxx_Brightness_ValueChanged"/>
+                        <controls:MairaKnob Grid.Column="0" Margin="10,0,10,0" Title="{Binding Localization[Brightness]}" Value="{Binding Settings.AdminBoxxBrightness, Mode=TwoWay}" ValueString="{Binding Settings.AdminBoxxBrightnessString}" SmallValueChangeStep="0.001" LargeValueChangeStep="0.05" RotationMultiplier="10" PlusButtonMappings="{Binding Settings.AdminBoxxBrightnessPlusButtonMappings}" MinusButtonMappings="{Binding Settings.AdminBoxxBrightnessMinusButtonMappings}" ValueChangedCallback="AdminBoxx_Brightness_ValueChanged"/>
 
                     </Grid>
 
-
-                    <Grid x:Name="AdminBoxx_LED_Grid" HorizontalAlignment="Center">
+                    <Grid Margin="0,0,0,20">
 
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
 
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-
-                        <Label Grid.Row="0" Grid.Column="0" Content="Y" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="1" Content="1" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="2" Content="2" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="3" Content="3" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="4" Content="BLK" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="5" Content="CLR" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="6" Content="CLR ALL" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="0" Grid.Column="7" Content="CHAT" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-
-                        <Label Grid.Row="1" Grid.Column="0" Content="SGL/DBL" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="1" Content="4" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="2" Content="5" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="3" Content="6" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="4" Content="WAVE DRV" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="5" Content="EOL DRV" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="6" Content="DQ DRV" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="1" Grid.Column="7" Content="RMV DRV" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-
-                        <Label Grid.Row="2" Grid.Column="0" Content="+1 LAP" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="1" Content="7" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="2" Content="8" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="3" Content="9" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="4" Content="ADV" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="5" Content="LIVE" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="6" Content="PREV INC" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="2" Grid.Column="7" Content="NEXT INC" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-
-                        <Label Grid.Row="3" Grid.Column="0" Content="-1 LAP" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="1" Content="ESC" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="2" Content="0" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="3" Content="ENT" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="4" Content="| &gt;" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="5" Content="&lt; &lt;" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="6" Content="&gt;" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
-                        <Label Grid.Row="3" Grid.Column="7" Content="&gt; &gt;" Margin="10" BorderThickness="5" BorderBrush="White" Width="80" Height="80" HorizontalContentAlignment="Center" Background="Black" FontSize="13"/>
+                        <controls:MairaKnob Grid.Column="0" Margin="10,0,10,0" Title="{Binding Localization[Volume]}" Value="{Binding Settings.AdminBoxxVolume, Mode=TwoWay}" ValueString="{Binding Settings.AdminBoxxVolumeString}" SmallValueChangeStep="0.001" LargeValueChangeStep="0.05" RotationMultiplier="10" PlusButtonMappings="{Binding Settings.AdminBoxxVolumePlusButtonMappings}" MinusButtonMappings="{Binding Settings.AdminBoxxVolumeMinusButtonMappings}" ValueChangedCallback="AdminBoxx_Volume_ValueChanged"/>
 
                     </Grid>
-
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                        <controls:MairaButton x:Name="AdminBoxx_Yellow" Title="Yellow" Margin="20" Click="AdminBoxx_Yellow_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_Green" Title="Green" Margin="20" Click="AdminBoxx_Green_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_White" Title="White" Margin="20" Click="AdminBoxx_White_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_Checkered" Title="Checkered" Margin="20" Click="AdminBoxx_Checkered_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_Black" Title="Black" Margin="20" Click="AdminBoxx_Black_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_Blue" Title="Blue" Margin="20" Click="AdminBoxx_Blue_Click"/>
-                        <controls:MairaButton x:Name="AdminBoxx_Red" Title="Red" Margin="20" Click="AdminBoxx_Red_Click"/>
-                    </StackPanel>
 
                 </StackPanel>
 
